--- a/_config.yml
+++ b/_config.yml
@@ -33,11 +33,11 @@ kramdown:
 ####################################
 #
 owner:
-  name: Leonids
+  name: rumor1993
   avatar: leonids-logo.png
-  job: "A jekyll theme"
-  bio: "A simple and awesome blog theme powered by jekyll."
-  email:
+  job: "Madrascheck Developer"
+  bio: "웹/서버 개발자 블로그"
+  email: rumor1993@naver.com
   disqus-shortname:
   twitter: #username
   facebook: #username
