--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ kramdown:
 #
 owner:
   name: rumor1993
-  avatar: leonids-logo.png
+  avatar: logo_flow.png
   job: "Madrascheck Developer"
   bio: "웹/서버 개발자 블로그"
   email: rumor1993@naver.com
