--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ owner:
   bing-verify:
   github: #username
   gitlab: #username
+  google_analytics: UA-155299423-1
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
   linkedin: #username
   skype: #username
