--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ owner:
   job: "Madrascheck Developer"
   bio: "웹/서버 개발자 블로그"
   email: rumor1993@naver.com
-  disqus-shortname: rumor1993.github.io
+  disqus-shortname: https://rumor1993-github-io
   twitter: #username
   facebook: #username
   google:
